Fix styles. Display properly on tablet and smartphone devices. Closes #4. Closes #5.

--- a/css/main.css
+++ b/css/main.css
@@ -99,8 +99,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   text-align: center;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
 }
 
 .board-tile {
@@ -124,10 +124,6 @@ body {
   visibility: hidden;
 }
 
-.board-tile:nth-child(n+4) {
-  margin-right: 0;
-}
-
 #victory-dialog {
   min-height: 500px;
   width: 100%;
@@ -143,4 +139,27 @@ body {
 #copyright-text {
   width: 100%;
   text-align: center;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .board-tile {
+    width: 20.5555%;
+    margin: 5px;
+    padding: 30px 15px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .board-tile {
+    width: 20.5555%;
+    margin: 5px;
+    padding: 15px 10px;
+  }
 }
